# PS

./: 1551B1 - Wonderful Coloring - 1.cpp  A. Bits Operation  A. Dislike of Three.cpp  A. Polycarp and Coins.cpp  A. Spy Detected!.cpp  A. two pointers.cpp  B - Swaps.cpp  B. Bitmask Operation.cpp  B. Funny Permutation.cpp  B. New Year's Number.cpp  C. A-B Palindrome.cpp  C. Bitmask Operation (hard).cpp  C. Min Abs.cpp  C. Number Game.cpp  CMakeLists.txt  D. Non-zero Segments.cpp  D. Zero Remainder Array.cpp  DemonSlayer.cpp  E - Bashar and the bad land (Easy).cpp  E. Even odd subset.cpp  E. Pyramid.cpp  Fennec VS. Snuke AtCoder - arc078_b .cpp  H - Mathematical Addition.cpp  J - Windblume Ode.cpp  J. Logs.cpp  Kindergarten_Counting_Game_UVA_-_494_  M - MEXor Mixup.cpp  M. Generating palindromic substrings.cpp  R. Gain My Trust.cpp  README.md  S. Split the string.cpp  S. Three Parts of the Array.cpp  Takahashi_Tour_atcoder_abc213_d.cpp  U. Longest k-Good Segment.cpp  bit manuplation topic.cpp  lablabla.cpp  output.txt  test4
Algo Part 1 MS/: Problem#1 Print Path[BFS].cpp
Algo2Practise/: CMakeLists.txt  Filling BookCase shelves.cpp  MCM.cpp  Minimum Insertion steps.cpp  Minimum cost to cut stick.cpp  Partition Array For maximum Sum.cpp  coin change.cpp  combination Sum.cpp  minPathSu.cpp
Assuit Math Sheet/: B. Steps.cpp  (+3 more)
Progvar/Prime and composite, finding divisors Fun/: A. Bachgold Problem.cpp  A. Design Tutorial: Learn from Math.cpp  B. T-primes.cpp  C - Cream puff.cpp  CMakeLists.txt  D - Five, Five Everywhere.cpp  D - Not Divisible.cpp  D - Staircase Sequences.cpp
(+472 files in other folders)
